--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,73 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView android:text="@string/main_title" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="26dp" />
 
+    <TextView android:text="@string/lat_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#00F"
+        android:id="@+id/lat_label"
+        android:textSize="20dp"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="25dp" />
+
+    <TextView android:text="@string/lat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lat"
+        android:textSize="30dp"
+        android:layout_below="@+id/lat_label"
+        android:layout_alignParentStart="true" />
+
+    <TextView android:text="@string/lon_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lon_label"
+        android:textColor="#00F"
+        android:textSize="20dp"
+        android:layout_below="@+id/lat"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="21dp" />
+
+    <TextView android:text="@string/lon"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lon"
+        android:textSize="30dp"
+        android:layout_below="@+id/lon_label"
+        android:layout_alignParentStart="true" />
+
+    <TextView android:text="Location:"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/geo_label"
+        android:textColor="#00F"
+        android:textSize="20dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView android:text="\?"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/geo"
+        android:textSize="30dp"
+        android:layout_below="@+id/geo_label"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/see_igarape"
+        android:onClick="getMe"
+
+        android:layout_below="@+id/geo"
+        android:layout_alignStart="@+id/textView"
+        android:layout_marginTop="25dp" />
 </RelativeLayout>
